--- a/foxit_xamarin_android/FoxitUIExtensions/FoxitUIExtensions/FoxitUIExtensions.csproj
+++ b/foxit_xamarin_android/FoxitUIExtensions/FoxitUIExtensions/FoxitUIExtensions.csproj
@@ -87,23 +87,22 @@
     <None Include="Jars\AboutJars.txt" />
     <None Include="Additions\AboutAdditions.txt" />
     <None Include="packages.config" />
-    <EmbeddedNativeLibrary Include="..\..\libs\arm64-v8a\librdk.so">
-      <Link>Jars\arm64-v8a\librdk.so</Link>
-    </EmbeddedNativeLibrary>
-    <EmbeddedNativeLibrary Include="..\..\libs\armeabi-v7a\librdk.so">
-      <Link>Jars\armeabi-v7a\librdk.so</Link>
-    </EmbeddedNativeLibrary>
-    <EmbeddedNativeLibrary Include="..\..\libs\x86\librdk.so">
-      <Link>Jars\x86\librdk.so</Link>
-    </EmbeddedNativeLibrary>
     <LibraryProjectZip Include="..\..\libs\FoxitRDKUIExtensions.aar">
       <Link>Jars\FoxitRDKUIExtensions.aar</Link>
     </LibraryProjectZip>
   </ItemGroup>
   <ItemGroup>
-    <TransformFile Include="Transforms\Metadata.xml" />
+    <TransformFile Include="Transforms\Metadata.xml">
+      <SubType>Designer</SubType>
+    </TransformFile>
     <TransformFile Include="Transforms\EnumFields.xml" />
     <TransformFile Include="Transforms\EnumMethods.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\FoxitRDK\FoxitRDK\FoxitRDK.csproj">
+      <Project>{c3f70847-6341-4bef-8c9b-224ff64065ae}</Project>
+      <Name>FoxitRDK</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <Import Project="..\..\complete_pdf_viewer\packages\Xamarin.Android.Support.Annotations.27.0.2.1\build\MonoAndroid81\Xamarin.Android.Support.Annotations.targets" Condition="Exists('..\..\complete_pdf_viewer\packages\Xamarin.Android.Support.Annotations.27.0.2.1\build\MonoAndroid81\Xamarin.Android.Support.Annotations.targets')" />
