--- a/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/complete_pdf_viewer.csproj
+++ b/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/complete_pdf_viewer.csproj
@@ -70,10 +70,10 @@
     <None Include="Assets\AboutAssets.txt" />
     <AndroidAsset Include="..\..\libs\rdk_key.txt">
       <Link>Assets\rdk_key.txt</Link>
-    </AndroidAsset> 
+    </AndroidAsset>
     <AndroidAsset Include="..\..\libs\rdk_sn.txt">
       <Link>Assets\rdk_sn.txt</Link>
-    </AndroidAsset> 
+    </AndroidAsset>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\activity_main.axml">
@@ -108,6 +108,10 @@
     <ProjectReference Include="..\..\Cropper\Cropper\Cropper.csproj">
       <Project>{56ca4dbd-6301-40e4-b60a-55522674a0c0}</Project>
       <Name>Cropper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\FoxitRDK\FoxitRDK\FoxitRDK.csproj">
+      <Project>{c3f70847-6341-4bef-8c9b-224ff64065ae}</Project>
+      <Name>FoxitRDK</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\FoxitUIExtensions\FoxitUIExtensions\FoxitUIExtensions.csproj">
       <Project>{5c736def-108d-4948-b06b-c7c7569f1e72}</Project>
