--- a/foxit_xamarin_ios/FoxitRDKBinding/FoxitRDKBinding/FoxitRDKBinding.csproj
+++ b/foxit_xamarin_ios/FoxitRDKBinding/FoxitRDKBinding/FoxitRDKBinding.csproj
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -36,11 +35,11 @@
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
-    <ObjcBindingApiDefinition Include="ApiDefinitionUIExtensions.cs" />
+    <ObjcBindingApiDefinition Include="ApiDefinitionsUIDynamic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingCoreSource Include="Structs.cs" />
-    <ObjcBindingCoreSource Include="StructsUIExtensions.cs" />
+    <ObjcBindingCoreSource Include="StructsUIDynamic.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
