--- a/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/FoxitRDKDemo.csproj
+++ b/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/FoxitRDKDemo.csproj
@@ -928,10 +928,9 @@
       <Kind>Framework</Kind>
       <SmartLink>False</SmartLink>
     </NativeReference>
-    <NativeReference Include="..\..\libs\libFoxitRDKUIExtensions.a">
-      <Kind>Static</Kind>
+    <NativeReference Include="..\..\libs\uiextensionsDynamic.framework">
+      <Kind>Framework</Kind>
       <SmartLink>False</SmartLink>
-      <ForceLoad>True</ForceLoad>
     </NativeReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
