--- a/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/Properties/AndroidManifest.xml
+++ b/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/Properties/AndroidManifest.xml
@@ -13,6 +13,7 @@
   <uses-permission android:name="android.permission.RUN_INSTRUMENTATION" />
   <uses-permission android:name="com.android.email.permission.READ_ATTACHMENT" />
   <uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="android.permission.RECORD_AUDIO" />
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
   
 	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
