--- a/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/Info.plist
+++ b/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/Info.plist
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -36,5 +36,18 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>For adding photographs to your PDF files.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>RDK need to add record permissions,please allow</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>RDK need to add picture permissions,please allow</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>For adding pictures to your PDF files.</string>
 </dict>
 </plist>
