--- a/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/FoxitRDKDemo.csproj
+++ b/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/FoxitRDKDemo.csproj
@@ -29,6 +29,7 @@
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <PlatformTarget>x86</PlatformTarget>
     <MtouchExtraArgs>-cxx -gcc_flags "-lc++"</MtouchExtraArgs>
+<CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>pdbonly</DebugType>
