Update Android code for support Foxit PDF SDK 6.3

--- a/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/complete_pdf_viewer.csproj
+++ b/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/complete_pdf_viewer.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="MyApplication.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="PDFReaderActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
