--- a/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/Info.plist
+++ b/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleName</key>
 	<string>FoxitRDKDemo</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.foxitsoftware.xamarin.foxitrdkdemo</string>
+	<string>com.foxitcorporation.rdkViewCtrlDemo</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
