--- a/foxit_xamarin_android/FoxitUIExtensions/FoxitUIExtensions/packages.config
+++ b/foxit_xamarin_android/FoxitUIExtensions/FoxitUIExtensions/packages.config
@@ -7,6 +7,7 @@
   <package id="Xamarin.AndroidX.Arch.Core.Common" version="2.1.0-rc3" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.Arch.Core.Runtime" version="2.1.0-rc3" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.AsyncLayoutInflater" version="1.0.0-rc3" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.CardView" version="1.0.0-preview06" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.Collection" version="1.1.0-rc3" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.CoordinatorLayout" version="1.1.0-rc3" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.Core" version="1.1.0-rc3" targetFramework="monoandroid90" />
@@ -33,8 +34,10 @@
   <package id="Xamarin.AndroidX.SavedState" version="1.0.0-rc3" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.SlidingPaneLayout" version="1.0.0-rc3" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.SwipeRefreshLayout" version="1.0.0-rc3" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.Transition" version="1.2.0-preview06" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.VectorDrawable" version="1.1.0-rc3" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.VectorDrawable.Animated" version="1.1.0-rc3" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.VersionedParcelable" version="1.1.0-rc3" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.ViewPager" version="1.0.0-rc3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Google.Android.Material" version="1.1.0-preview06" targetFramework="monoandroid90" />
 </packages>
