--- a/foxit_xamarin_android/FoxitUIExtensions/FoxitUIExtensions/packages.config
+++ b/foxit_xamarin_android/FoxitUIExtensions/FoxitUIExtensions/packages.config
@@ -20,6 +20,7 @@
   <package id="Xamarin.AndroidX.Legacy.Support.Core.Utils" version="1.0.0" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.Legacy.Support.V4" version="1.0.0" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.Lifecycle.Common" version="2.1.0" targetFramework="monoandroid90" />
+  <package id="Xamarin.AndroidX.Lifecycle.LiveData" version="2.1.0" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.Lifecycle.LiveData.Core" version="2.1.0" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.Lifecycle.Runtime" version="2.1.0" targetFramework="monoandroid90" />
   <package id="Xamarin.AndroidX.Lifecycle.ViewModel" version="2.1.0" targetFramework="monoandroid90" />
