--- a/foxit_xamarin_android/Microsoft_Aad_Adal/Microsoft_Aad_Adal/Microsoft_Aad_Adal.csproj
+++ b/foxit_xamarin_android/Microsoft_Aad_Adal/Microsoft_Aad_Adal/Microsoft_Aad_Adal.csproj
@@ -18,6 +18,7 @@
     <AndroidClassParser>class-parse</AndroidClassParser>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <AndroidSdkBuildToolsVersion>28.0.3</AndroidSdkBuildToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
