--- a/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/complete_pdf_viewer.csproj
+++ b/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/complete_pdf_viewer.csproj
@@ -43,6 +43,9 @@
     <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
     <AndroidSupportedAbis />
     <JavaMaximumHeapSize>2G</JavaMaximumHeapSize>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <AndroidDexTool>dx</AndroidDexTool>
+    <AndroidUseAapt2>true</AndroidUseAapt2>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
