--- a/foxit_xamarin_android/Xcrash/Xcrash/Xcrash.csproj
+++ b/foxit_xamarin_android/Xcrash/Xcrash/Xcrash.csproj
@@ -5,17 +5,20 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4113430F-7C86-45A6-89DB-A2B78DF51790}</ProjectGuid>
+    <ProjectGuid>{6A76571E-F970-45A6-83D8-6825D4C50906}</ProjectGuid>
     <ProjectTypeGuids>{10368E6C-D01B-4462-8E8B-01FC667A7035};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{77efb91c-a7e9-4b0e-a7c5-31eeec3c6d46}</TemplateGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MS_Common</RootNamespace>
-    <AssemblyName>MS_Common</AssemblyName>
+    <RootNamespace>Xcrash</RootNamespace>
+    <AssemblyName>Xcrash</AssemblyName>
     <FileAlignment>512</FileAlignment>
+    <Deterministic>True</Deterministic>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
     <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidClassParser>class-parse</AndroidClassParser>
+    <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
+    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -27,7 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>portable</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
@@ -45,25 +48,21 @@
   <ItemGroup>
     <None Include="Jars\AboutJars.txt" />
     <None Include="Additions\AboutAdditions.txt" />
-    <LibraryProjectZip Include="..\..\libs\microsoft-identity-common-0.0.10.aar">
-      <Link>Jars\microsoft-identity-common-0.0.10.aar</Link>
+    <LibraryProjectZip Include="..\..\libs\xcrash-android-lib-2.4.9.aar">
+      <Link>Jars\xcrash-android-lib-2.4.9.aar</Link>
     </LibraryProjectZip>
-    <EmbeddedJar Include="..\..\libs\nimbus-jose-jwt-5.7.jar">
-      <Link>Jars\nimbus-jose-jwt-5.7.jar</Link>
-    </EmbeddedJar>
-    <EmbeddedJar Include="..\..\libs\json-smart-2.3.jar">
-      <Link>Jars\json-smart-2.3.jar</Link>
-    </EmbeddedJar>
-    <EmbeddedJar Include="..\..\libs\accessors-smart-1.2.jar">
-      <Link>Jars\accessors-smart-1.2.jar</Link>
-    </EmbeddedJar>
   </ItemGroup>
   <ItemGroup>
-    <TransformFile Include="Transforms\Metadata.xml">
-      <SubType>Designer</SubType>
-    </TransformFile>
+    <TransformFile Include="Transforms\Metadata.xml" />
     <TransformFile Include="Transforms\EnumFields.xml" />
     <TransformFile Include="Transforms\EnumMethods.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+  </Target>
+  <Target Name="AfterBuild">
+  </Target>
+  -->
 </Project>
