--- a/foxit_xamarin_android/RMSSDK_UI/RMSSDK_UI/RMSSDK_UI.csproj
+++ b/foxit_xamarin_android/RMSSDK_UI/RMSSDK_UI/RMSSDK_UI.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <None Include="Jars\AboutJars.txt" />
     <None Include="Additions\AboutAdditions.txt" />
-    <LibraryProjectZip Include="..\..\libs\rms-sdk-ui.aar">
+    <LibraryProjectZip Include="..\..\libs\rms\rms-sdk-ui.aar">
       <Link>Jars\rms-sdk-ui.aar</Link>
     </LibraryProjectZip>
   </ItemGroup>
