--- a/foxit_xamarin_android/Xcrash/Xcrash/Xcrash.csproj
+++ b/foxit_xamarin_android/Xcrash/Xcrash/Xcrash.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <None Include="Jars\AboutJars.txt" />
     <None Include="Additions\AboutAdditions.txt" />
-    <LibraryProjectZip Include="..\..\libs\xcrash-android-lib-2.4.9.aar">
+    <LibraryProjectZip Include="..\..\libs\xcrash\xcrash-android-lib-2.4.9.aar">
       <Link>Jars\xcrash-android-lib-2.4.9.aar</Link>
     </LibraryProjectZip>
   </ItemGroup>
