--- a/foxit_xamarin_android/Xcrash/Xcrash/Xcrash.csproj
+++ b/foxit_xamarin_android/Xcrash/Xcrash/Xcrash.csproj
@@ -10,8 +10,8 @@
     <TemplateGuid>{77efb91c-a7e9-4b0e-a7c5-31eeec3c6d46}</TemplateGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Xcrash</RootNamespace>
-    <AssemblyName>Xcrash</AssemblyName>
+    <RootNamespace>XCrash</RootNamespace>
+    <AssemblyName>XCrash</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <Deterministic>True</Deterministic>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
