--- a/foxit_xamarin_android/FoxitPDFScan_UI/FoxitPDFScan_UI/FoxitPDFScan_UI.csproj
+++ b/foxit_xamarin_android/FoxitPDFScan_UI/FoxitPDFScan_UI/FoxitPDFScan_UI.csproj
@@ -64,6 +64,19 @@
     <PackageReference Include="Xamarin.AndroidX.AppCompat">
       <Version>1.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView">
+      <Version>1.1.0</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\FoxitMobileScanningRDK\FoxitMobileScanningRDK\FoxitMobileScanningRDK.csproj">
+      <Project>{62cc7aaa-76fa-47db-841d-d8e3ffdd9464}</Project>
+      <Name>FoxitMobileScanningRDK</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\FoxitUIExtensions\FoxitUIExtensions\FoxitUIExtensions.csproj">
+      <Project>{5c736def-108d-4948-b06b-c7c7569f1e72}</Project>
+      <Name>FoxitUIExtensions</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
