--- a/foxit_xamarin_android/RMSSDK_UI/RMSSDK_UI/RMSSDK_UI.csproj
+++ b/foxit_xamarin_android/RMSSDK_UI/RMSSDK_UI/RMSSDK_UI.csproj
@@ -62,6 +62,12 @@
       <Version>1.0.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\RMSSDK\RMSSDK\RMSSDK.csproj">
+      <Project>{16819400-81ce-41d5-b4dc-143e497294a3}</Project>
+      <Name>RMSSDK</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
