--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ foxit_xamarin_ios/Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI/bin
 foxit_xamarin_ios/Foxit.iOS.Scanning.UI/.vs
 foxit_xamarin_ios/FoxitRDKDemo/packages
 foxit_xamarin_ios/Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI/obj
+foxit_xamarin_ios/Foxit.iOS.Scanning.UI/Foxit.iOS.Scanning.UI/.vs
