fix rms connect fail

--- a/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/FoxitRDKDemo.csproj
+++ b/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/FoxitRDKDemo.csproj
@@ -25,12 +25,12 @@
     <MtouchFastDev>true</MtouchFastDev>
     <IOSDebuggerPort>52247</IOSDebuggerPort>
     <MtouchLink>SdkOnly</MtouchLink>
-    <MtouchArch>i386, x86_64</MtouchArch>
+    <MtouchArch>x86_64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <PlatformTarget>x86</PlatformTarget>
     <MtouchExtraArgs>-cxx -gcc_flags "-lc++"</MtouchExtraArgs>
 <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-<MtouchSdkVersion>13.4</MtouchSdkVersion>
+<MtouchSdkVersion>14.3</MtouchSdkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>pdbonly</DebugType>
@@ -42,7 +42,7 @@
     <MtouchFloat32>true</MtouchFloat32>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchLink>SdkOnly</MtouchLink>
-    <MtouchArch>ARMv7, ARM64</MtouchArch>
+    <MtouchArch>ARM64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <PlatformTarget>x86</PlatformTarget>
     <MtouchExtraArgs>-cxx -gcc_flags "-lc++"</MtouchExtraArgs>
@@ -57,7 +57,7 @@
     <DeviceSpecificBuild>true</DeviceSpecificBuild>
     <MtouchNoSymbolStrip>true</MtouchNoSymbolStrip>
     <MtouchLink>None</MtouchLink>
-    <MtouchArch>i386, x86_64</MtouchArch>
+    <MtouchArch>x86_64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <PlatformTarget>x86</PlatformTarget>
     <MtouchExtraArgs>-cxx -gcc_flags "-lc++"</MtouchExtraArgs>
@@ -78,8 +78,8 @@
     <MtouchFloat32>true</MtouchFloat32>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <IOSDebuggerPort>50959</IOSDebuggerPort>
-    <MtouchLink>None</MtouchLink>
-    <MtouchArch>ARMv7, ARM64</MtouchArch>
+    <MtouchLink>SdkOnly</MtouchLink>
+    <MtouchArch>ARM64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <PlatformTarget>x86</PlatformTarget>
     <MtouchExtraArgs>-cxx -gcc_flags "-lc++"</MtouchExtraArgs>
