--- a/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/Resources/uiextensions_config.json
+++ b/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/Resources/uiextensions_config.json
@@ -23,7 +23,7 @@
             "polygon": true,
             "cloud": true,
             "polyline": true,
-            "distance": true,
+            "measure": true,
             "image": true,
             "audio": true,
             "video": true,
@@ -60,7 +60,7 @@
         "highlightFormColor":"#200066cc",
         "fullscreen" : true,
         "annotations": {
-            "continuouslyAdd" : false,
+            "continuouslyAdd" : true,
             "highlight": {
                 "color" : "#ffff00",
                 "opacity" : 1.0
@@ -70,7 +70,7 @@
                 "opacity" : 1.0
             },
             "squiggly": {
-                "color" : "#ff6633",
+                "color" : "#993399",
                 "opacity" : 1.0
             },
             "strikeout": {
@@ -146,12 +146,12 @@
                 "textSize" : 18.0
             },
             "note": {
-                "color" : "#ff6633",
+                "color" : "#ff0000",
                 "opacity" : 1.0,
                 "icon" : "Comment"
             },
             "attachment": {
-                "color" : "#ff6633",
+                "color" : "#ff0000",
                 "opacity" : 1.0,
                 "icon" : "Pushpin"
             },
@@ -159,7 +159,7 @@
                 "rotation" : 0,
                 "opacity" : 1.0
             },
-            "distance": {
+            "measure": {
                 "color" : "#ff0000",
                 "opacity" : 1.0,
                 "thickness" : 2,
